@@ -1,3 +1,6 @@
+Upcoming:
+  * Avoid confustion by autosaving calculator state when settings changed
+
 15C only, Version 2.1.3:
   * Backspace key clears flashing error/overflow (Issue 34)
 
